<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="transact_dbsy.HisApproval">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x150">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x50"
            android:text="@string/myapproval"
            android:textSize="@dimen/x35" />

        <Spinner
            android:id="@+id/his_approval_spinner"
            android:layout_width="@dimen/x300"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/x20"
            android:background="@drawable/editext_bk"
            android:entries="@array/languages"
            android:overlapAnchor="false"
            android:spinnerMode="dropdown"></Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x240"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x50"
            android:text="@string/opinion"
            android:textSize="@dimen/x35" />

        <EditText
            android:id="@+id/his_approval_edtv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/x20"
            android:background="@drawable/editext_bk"
            android:gravity="left|top"
            android:inputType="textMultiLine"
            android:padding="@dimen/x10"
            android:text=""
            android:textSize="@dimen/x40" />

    </LinearLayout>


    <Button
        android:id="@+id/his_approval_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/x50"
        android:background="@drawable/smssdk_btn"
        android:text="@string/approval_submit"
        android:textColor="@color/white"
        android:textSize="@dimen/x40" />

</LinearLayout>
