<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x20"
        android:background="@color/white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/x10"
                android:gravity="center_vertical">

                <TextView
                    android:textColor="@color/blue_deep"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/x20"
                    android:text="@string/early_warning_name"
                    android:textSize="@dimen/x35" />

                <TextView
                    android:id="@+id/yj_yjmc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x20" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/x10"
                android:gravity="center_vertical">

                <TextView
                    android:textColor="@color/blue_deep"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/x20"
                    android:text="@string/early_warning_level"
                    android:textSize="@dimen/x35" />

                <TextView
                    android:id="@+id/yj_lb"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/x10"
                android:gravity="center_vertical">

                <TextView
                    android:textColor="@color/blue_deep"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/x20"
                    android:text="@string/early_warning_content"
                    android:textSize="@dimen/x35" />

                <TextView
                    android:id="@+id/yj_nr"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/x10"
                android:gravity="center_vertical">

                <TextView
                    android:textColor="@color/blue_deep"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/x20"
                    android:text="@string/early_warning_time"
                    android:textSize="@dimen/x35" />

                <TextView
                    android:id="@+id/yj_yjsj"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>
