<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.dimine_projectd.ModifyPassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x130"
            android:background="@color/blue_deep"
            android:gravity="center">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/plan_weekly_detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="@dimen/x50" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_modify_password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/x50" />
            </LinearLayout>


        </LinearLayout>


        <ImageView
            android:id="@+id/modify_password_back"
            android:layout_width="@dimen/x80"
            android:layout_height="@dimen/x80"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x20"
            android:background="@drawable/back" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x450"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/x20"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modify_password_old"
                android:textSize="@dimen/x35"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:id="@+id/old_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/editext_bk"
                android:text=""
                android:paddingLeft="@dimen/x20"
                android:textSize="@dimen/x50"
                android:singleLine="true"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/x20"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modify_password_new"
                android:textSize="@dimen/x35"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/editext_bk"
                android:text=""
                android:paddingLeft="@dimen/x20"
                android:inputType="textPassword"
                android:textSize="@dimen/x50"
                android:singleLine="true"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/x20"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modify_password_again"
                android:textSize="@dimen/x35"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/editext_bk"
                android:text=""
                android:inputType="textPassword"
                android:paddingLeft="@dimen/x20"
                android:textSize="@dimen/x50"
                android:singleLine="true"
                />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/modify_password_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/x50"
        android:background="@drawable/smssdk_btn"
        android:text="@string/modify_password_submit"
        android:textColor="@color/white"
        android:textSize="@dimen/x40" />
</LinearLayout>
