<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_deep"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.example.administrator.dimine_projectd.MyPlEditext">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/top_height"
                android:background="@color/blue_deep"
                android:gravity="center">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/my_plan_test_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/write_comments_title"
                        android:textColor="@color/white"
                        android:textSize="@dimen/x50" />


                </LinearLayout>


            </LinearLayout>


            <ImageView
                android:id="@+id/pl_edtext_back"
                android:layout_width="@dimen/x80"
                android:layout_height="@dimen/x80"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x20"
                android:background="@drawable/back" />


            <TextView
                android:id="@+id/my_pl_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/x20"
                android:text="@string/send_comments"
                android:textColor="@color/white"
                android:textSize="@dimen/x40" />
        </RelativeLayout>

        <EditText
            android:id="@+id/my_pl_editext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x400"
            android:layout_margin="@dimen/x20"
            android:background="@drawable/editext_bk"
            android:gravity="top"
            android:hint="@string/say_somethings"
            android:inputType="textMultiLine"
            android:padding="@dimen/x10"
            android:text="" />

    </LinearLayout>
</LinearLayout>
